tests/ui/deprecation/deprecation-sanity.stderr
error[E0541]: unknown meta item 'reason'
  --> $DIR/deprecation-sanity.rs:4:43
   |
LL |     #[deprecated(since = "a", note = "a", reason)]
   |                                           ^^^^^^ expected one of `since`, `note`

error[E0539]: malformed `deprecated` attribute input
  --> $DIR/deprecation-sanity.rs:7:5
   |
LL |     #[deprecated(since = "a", note)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^----^^
   |                               |
   |                               expected this to be of the form `note = "..."`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[deprecated(since = "a", note)]
LL +     #[deprecated = "reason"]
   |
LL -     #[deprecated(since = "a", note)]
LL +     #[deprecated(/*opt*/ since = "version", /*opt*/ note = "reason")]
   |
LL -     #[deprecated(since = "a", note)]
LL +     #[deprecated]
   |

error[E0539]: malformed `deprecated` attribute input
  --> $DIR/deprecation-sanity.rs:10:5
   |
LL |     #[deprecated(since, note = "a")]
   |     ^^^^^^^^^^^^^-----^^^^^^^^^^^^^^
   |                  |
   |                  expected this to be of the form `since = "..."`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[deprecated(since, note = "a")]
LL +     #[deprecated = "reason"]
   |
LL -     #[deprecated(since, note = "a")]
LL +     #[deprecated(/*opt*/ since = "version", /*opt*/ note = "reason")]
   |
LL -     #[deprecated(since, note = "a")]
LL +     #[deprecated]
   |

error[E0539]: malformed `deprecated` attribute input
  --> $DIR/deprecation-sanity.rs:13:5
   |
LL |     #[deprecated(since = "a", note(b))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^-------^^
   |                               |
   |                               expected this to be of the form `note = "..."`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[deprecated(since = "a", note(b))]
LL +     #[deprecated = "reason"]
   |
LL -     #[deprecated(since = "a", note(b))]
LL +     #[deprecated(/*opt*/ since = "version", /*opt*/ note = "reason")]
   |
LL -     #[deprecated(since = "a", note(b))]
LL +     #[deprecated]
   |

error[E0539]: malformed `deprecated` attribute input
  --> $DIR/deprecation-sanity.rs:16:5
   |
LL |     #[deprecated(since(b), note = "a")]
   |     ^^^^^^^^^^^^^--------^^^^^^^^^^^^^^
   |                  |
   |                  expected this to be of the form `since = "..."`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[deprecated(since(b), note = "a")]
LL +     #[deprecated = "reason"]
   |
LL -     #[deprecated(since(b), note = "a")]
LL +     #[deprecated(/*opt*/ since = "version", /*opt*/ note = "reason")]
   |
LL -     #[deprecated(since(b), note = "a")]
LL +     #[deprecated]
   |

error[E0539]: malformed `deprecated` attribute input
  --> $DIR/deprecation-sanity.rs:19:5
   |
LL |     #[deprecated(note = b"test")]
   |     ^^^^^^^^^^^^^^^^^^^^-^^^^^^^^
   |                         |
   |                         help: consider removing the prefix
   |
   = note: expected a normal string literal, not a byte string literal

error[E0565]: malformed `deprecated` attribute input
  --> $DIR/deprecation-sanity.rs:22:5
   |
LL |     #[deprecated("test")]
   |     ^^^^^^^^^^^^^------^^
   |                  |
   |                  didn't expect a literal here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[deprecated("test")]
LL +     #[deprecated = "reason"]
   |
LL -     #[deprecated("test")]
LL +     #[deprecated(/*opt*/ since = "version", /*opt*/ note = "reason")]
   |
LL -     #[deprecated("test")]
LL +     #[deprecated]
   |

error: multiple `deprecated` attributes
  --> $DIR/deprecation-sanity.rs:27:1
   |
LL | #[deprecated(since = "a", note = "b")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/deprecation-sanity.rs:26:1
   |
LL | #[deprecated(since = "a", note = "b")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0538]: malformed `deprecated` attribute input
  --> $DIR/deprecation-sanity.rs:30:1
   |
LL | #[deprecated(since = "a", since = "b", note = "c")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^-----------^^^^^^^^^^^^^^
   |                           |
   |                           found `since` used as a key more than once
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[deprecated(since = "a", since = "b", note = "c")]
LL + #[deprecated = "reason"]
   |
LL - #[deprecated(since = "a", since = "b", note = "c")]
LL + #[deprecated(/*opt*/ since = "version", /*opt*/ note = "reason")]
   |
LL - #[deprecated(since = "a", since = "b", note = "c")]
LL + #[deprecated]
   |

error: this `#[deprecated]` annotation has no effect
  --> $DIR/deprecation-sanity.rs:35:1
   |
LL | #[deprecated = "hello"]
   | ^^^^^^^^^^^^^^^^^^^^^^^ help: remove the unnecessary deprecation attribute
   |
   = note: `#[deny(useless_deprecated)]` on by default

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0538, E0539, E0541, E0565.
For more information about an error, try `rustc --explain E0538`.
